overflow fixd

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -10,6 +10,13 @@
 }
 
 
+.pure-u-1-3{
+    white-space: normal;   
+    word-break: break-all;
+    word-wrap: break-word;
+    width: auto;
+}
+
 .heading{
     text-align: center;
 }
@@ -80,7 +87,7 @@ h1{
     background-color:black;
 }
 #judokatable thead a{
-    font-family: 'Times New Roman';
+    font-family: 'Lucida Console';
     text-decoration:none;
     color:white;
 }
